# prizm-public

./: LICENSE  README.md  pyproject.toml  requirements.txt
reports/: master-summary.html  onnx-gpu-decoupling-fix-2026-04-29.html
src/model/: model.py
src/prizm_napari/: __init__.py  _widget.py  analysis.py  batch_matlab_mirror_cli.py  batch_segmentation_cli.py  batch_segmentation_core.py  chemical_analysis.py  chemical_analysis_widget.py  cli.py  infer.py  input_discovery.py  matlab_mirror.py  minipanel_analysis.py  minipanel_cli.py  minipanel_widget.py  moa_analysis.py  moa_cli.py  moa_widget.py  napari.yaml  plot_colors.py  utils.py  workbook_selection_dialogs.py
src/prizm_nn/: dataset.py  test.py  train.py  utils.py  val.py
